--- a/web/index.html
+++ b/web/index.html
@@ -1,60 +1,6 @@
 <!DOCTYPE html>
-<title>Termostato</title>
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<meta charset="UTF-8">
 
-<link rel="stylesheet" href="css/semantic.min.css">
-<link rel="stylesheet" href="css/style.css">
-
-<div class="ui middle aligned center aligned grid">
-    <div class="column">
-        <h2 class="ui teal image header">
-            <!--<img src="images/logo.png" class="image">-->
-            <div class="content">
-                Entra nel Pannello di Controllo
-            </div>
-        </h2>
-        <form class="ui large form">
-            <div class="ui stacked segment">
-                <div class="field">
-                    <div class="ui left icon input">
-                        <i class="lock icon"></i>
-                        <input type="password" name="password" placeholder="Password">
-                    </div>
-                </div>
-                <div class="ui fluid large teal submit button">Login</div>
-            </div>
-
-            <div class="ui error message"></div>
-        </form>
-    </div>
-</div>
-
-<script src="js/jquery.min.js"></script>
-<script src="js/semantic.min.js"></script>
 <script>
-    $(document)
-        .ready(function() {
-            $('.ui.form')
-                .form({
-                    fields: {
-                        password: {
-                            identifier  : 'password',
-                            rules: [
-                                {
-                                    type   : 'empty',
-                                    prompt : 'Please enter your password'
-                                },
-                                {
-                                    type   : 'length[6]',
-                                    prompt : 'Your password must be at least 6 characters'
-                                }
-                            ]
-                        }
-                    }
-                })
-            ;
-        })
-    ;
+
 </script>
