--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,18 @@
     <input type="checkbox" data-toggle="toggle" id="autoCheckbox" data-on="Automatico" data-off="Manuale">
 
     <section id="auto">
-        WIP
+        <table class="table table-striped">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Ora</th>
+                    <th scope="col">Temperatura</th>
+                </tr>
+            </thead>
+            <tbody id="auto-table">
+
+            </tbody>
+        </table>
+        <button type="button" class="btn btn-primary" id="sendTable">Invia</button>
     </section>
 </div>
 
@@ -65,76 +76,63 @@
             $("#tempPrint").text(temp);
         });
 
-        $("#autoCheckbox").change(function () {
-            if(this.checked) {
-                ThermoInterface.post_switching_mode("auto").then(function () {
-                    $("#on").addClass("disabled");
-                    $("#off").addClass("disabled");
-                    $("#auto").removeClass("hidden");
-                    autoMode = true;
-                });
-            } else {
-                ThermoInterface.post_switching_mode("off").then(function () {
-                    $("#on").removeClass("disabled");
-                    $("#off").removeClass("disabled");
-                    $("#auto").addClass("hidden");
-                    $("#off").addClass("green");
-                    $("#on").removeClass("green");
-                    autoMode = false;
-                });
-            }
-        }).bootstrapToggle({
-            on: 'Automatico',
-            off: 'Manuale'
-        });
-
         // Select current mode
         ThermoInterface.get_switching_mode().then(function (mode) {
             if (mode === "off" || mode === "on") {
                 if (mode === "on") {
-                    $("#on").addClass("btn-primary");
-                    $("#off").removeClass("btn-primary");
-                    $("#off").addClass("btn-secondary");
-                    $("#on").removeClass("btn-secondary");
+                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
                 } else {
-                    $("#off").addClass("btn-primary");
-                    $("#on").removeClass("btn-primary");
-                    $("#on").addClass("btn-secondary");
-                    $("#off").removeClass("btn-secondary");
+                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
                 }
                 $("#auto").addClass("hidden");
                 $("#on").removeClass("disabled");
                 $("#off").removeClass("disabled");
 
                 autoMode = false;
-                $("#autoCheckbox").bootstrapToggle('on');
             } else {
                 $("#on").addClass("disabled");
                 $("#off").addClass("disabled");
                 if (mode === "auto_off") {
-                    $("#off").addClass("btn-primary");
-                    $("#on").removeClass("btn-primary");
-                    $("#on").addClass("btn-secondary");
-                    $("#off").removeClass("btn-secondary");
+                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
                 } else {
-                    $("#on").addClass("btn-primary");
-                    $("#off").removeClass("btn-primary");
-                    $("#off").addClass("btn-secondary");
-                    $("#on").removeClass("btn-secondary");
+                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
                 }
                 $("#auto").removeClass("hidden");
 
-                $("#autoCheckbox").bootstrapToggle('off');
                 autoMode = true;
             }
-        });
 
+            $("#autoCheckbox").bootstrapToggle(autoMode ? "on" : "off")
+                .change(function () {
+                    if(this.checked) {
+                        ThermoInterface.post_switching_mode("auto").then(function () {
+                            $("#on").addClass("disabled");
+                            $("#off").addClass("disabled");
+                            $("#auto").removeClass("hidden");
+                            autoMode = true;
+                        });
+                    } else {
+                        ThermoInterface.post_switching_mode("off").then(function () {
+                            $("#on").removeClass("disabled");
+                            $("#off").removeClass("disabled");
+                            $("#auto").addClass("hidden");
+                            $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                            $("#on").removeClass("btn-primary").addClass("btn-secondary");
+                            autoMode = false;
+                        });
+                    }
+                });
+        });
 
         $("#on").click(function () {
             if (!autoMode) {
                 ThermoInterface.post_switching_mode("on").then(function () {
-                    $("#on").addClass("green");
-                    $("#off").removeClass("green");
+                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
                 });
             }
         });
@@ -142,9 +140,25 @@
         $("#off").click(function () {
             if (!autoMode) {
                 ThermoInterface.post_switching_mode("off").then(function () {
-                    $("#off").addClass("green");
-                    $("#on").removeClass("green");
+                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
                 });
+            }
+        });
+
+        $("#sendTable").click(function () {
+            var data = [];
+            for (var i = 0; i < 24; i++) {
+                data.push(document.getElementById("C" + i).value);
+            }
+            ThermoInterface.post_auto_prog(data).then(function () { location.reload() });
+        });
+
+        // Populate auto table
+        ThermoInterface.get_auto_prog().then(function (data) {
+            for (var i = 0; i < 24; i++) {
+                document.getElementById("auto-table").innerHTML +=
+                    "<tr><th scope=\"row\">" + i + ":00</th><td><input value='" + data[i] + "' id='C" + i + "' type=\"number\" step=\"0.5\"></td></tr>";
             }
         });
     });
