--- a/web/index.html
+++ b/web/index.html
@@ -8,9 +8,10 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="css/bootstrap-toggle.min.css">
+<link rel="stylesheet" href="css/bootstrap-slider.min.css">
 <link rel="stylesheet" href="css/style.css">
 
-<div class="container">
+<div class="container hidden">
     <h1>
         <i class="fa fa-fire"></i>
         <span id="headerHeading"></span>
@@ -51,6 +52,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/bootstrap-toggle.min.js"></script>
+<script src="js/bootstrap-slider.min.js"></script>
 <script>
 
     var autoMode;
@@ -60,107 +62,115 @@
         if (error.message === locale.error_noLogin) {
             location.href = "login.html";
         }
-    });
-
-    $(document).ready(function() {
-
-        // Fill page title
-        ThermoInterface.get_identifier().then(function (identifier) {
-            document.title = identifier;
-            $("#headerHeading").text(identifier);
-        });
-
-        // Print room temp
-        // TODO: make it dynamic
-        ThermoInterface.temp().then(function (temp) {
-            $("#tempPrint").text(temp);
-        });
-
-        // Select current mode
-        ThermoInterface.get_switching_mode().then(function (mode) {
-            if (mode === "off" || mode === "on") {
-                if (mode === "on") {
-                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
-                } else {
-                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
-                }
-                $("#auto").addClass("hidden");
-                $("#on").removeClass("disabled");
-                $("#off").removeClass("disabled");
-
-                autoMode = false;
-            } else {
-                $("#on").addClass("disabled");
-                $("#off").addClass("disabled");
-                if (mode === "auto_off") {
-                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
-                } else {
-                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
-                }
-                $("#auto").removeClass("hidden");
-
-                autoMode = true;
-            }
-
-            $("#autoCheckbox").bootstrapToggle(autoMode ? "on" : "off")
-                .change(function () {
-                    if(this.checked) {
-                        ThermoInterface.post_switching_mode("auto").then(function () {
-                            $("#on").addClass("disabled");
-                            $("#off").addClass("disabled");
-                            $("#auto").removeClass("hidden");
-                            autoMode = true;
-                        });
+    }).then(function () {
+        $(document).ready(function() {
+            // Select current mode
+            ThermoInterface.get_switching_mode().then(function (mode) {
+                if (mode === "off" || mode === "on") {
+                    if (mode === "on") {
+                        $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#off").removeClass("btn-primary").addClass("btn-secondary");
                     } else {
-                        ThermoInterface.post_switching_mode("off").then(function () {
-                            $("#on").removeClass("disabled");
-                            $("#off").removeClass("disabled");
-                            $("#auto").addClass("hidden");
-                            $("#off").addClass("btn-primary").removeClass("btn-secondary");
-                            $("#on").removeClass("btn-primary").addClass("btn-secondary");
-                            autoMode = false;
-                        });
+                        $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#on").removeClass("btn-primary").addClass("btn-secondary");
+                    }
+                    $("#auto").addClass("hidden");
+                    $("#on").removeClass("disabled");
+                    $("#off").removeClass("disabled");
+
+                    autoMode = false;
+                } else {
+                    $("#on").addClass("disabled");
+                    $("#off").addClass("disabled");
+                    if (mode === "auto_off") {
+                        $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#on").removeClass("btn-primary").addClass("btn-secondary");
+                    } else {
+                        $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#off").removeClass("btn-primary").addClass("btn-secondary");
+                    }
+                    $("#auto").removeClass("hidden");
+
+                    autoMode = true;
+                }
+
+                $("#autoCheckbox").bootstrapToggle(autoMode ? "on" : "off")
+                    .change(function () {
+                        if(this.checked) {
+                            ThermoInterface.post_switching_mode("auto").then(function () {
+                                $("#on").addClass("disabled");
+                                $("#off").addClass("disabled");
+                                $("#auto").removeClass("hidden");
+                                autoMode = true;
+                            });
+                        } else {
+                            ThermoInterface.post_switching_mode("off").then(function () {
+                                $("#on").removeClass("disabled");
+                                $("#off").removeClass("disabled");
+                                $("#auto").addClass("hidden");
+                                $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                                $("#on").removeClass("btn-primary").addClass("btn-secondary");
+                                autoMode = false;
+                            });
+                        }
+                    });
+            }).then(function () {
+                // Populate auto table
+                ThermoInterface.get_auto_prog().then(function (data) {
+                    for (var i = 0; i < 24; i++) {
+                        document.getElementById("auto-table").innerHTML +=
+                            "<tr>" +
+                            "<th scope=\"row\">" + i + ":00</th>" +
+                            "<td>" +
+                            "<input class='rightmargin' value='" + data[i] + "' id='C" + i + "' type=\"number\" step=\"0.5\">" +
+                            "<input id=\"Cs" + i + "\" data-slider-id='Cs" + i + "Slider' type=\"text\" data-slider-min=\"10\" data-slider-max=\"30\" data-slider-step=\"1\" data-slider-value=\"" + data[i] + "\"/>" +
+                            "</td>" +
+                            "</tr>";
+                        $('#Cs' + i).slider();
                     }
                 });
-        });
-
-        $("#on").click(function () {
-            if (!autoMode) {
-                ThermoInterface.post_switching_mode("on").then(function () {
-                    $("#on").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#off").removeClass("btn-primary").addClass("btn-secondary");
+            }).then(function () {
+                // Fill page title
+                ThermoInterface.get_identifier().then(function (identifier) {
+                    document.title = identifier;
+                    $("#headerHeading").text(identifier);
                 });
-            }
-        });
-
-        $("#off").click(function () {
-            if (!autoMode) {
-                ThermoInterface.post_switching_mode("off").then(function () {
-                    $("#off").addClass("btn-primary").removeClass("btn-secondary");
-                    $("#on").removeClass("btn-primary").addClass("btn-secondary");
+            }).then(function () {
+                // Print room temp
+                // TODO: make it dynamic
+                ThermoInterface.temp().then(function (temp) {
+                    $("#tempPrint").text(temp);
                 });
-            }
-        });
+            }).then(function () {
+                $(".container").removeClass("hidden");
+            });
 
-        $("#sendTable").click(function () {
-            var data = [];
-            for (var i = 0; i < 24; i++) {
-                data.push(document.getElementById("C" + i).value);
-            }
-            ThermoInterface.post_auto_prog(data).then(function () { location.reload() });
-        });
+            $("#on").click(function () {
+                if (!autoMode) {
+                    ThermoInterface.post_switching_mode("on").then(function () {
+                        $("#on").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#off").removeClass("btn-primary").addClass("btn-secondary");
+                    });
+                }
+            });
 
-        // Populate auto table
-        ThermoInterface.get_auto_prog().then(function (data) {
-            for (var i = 0; i < 24; i++) {
-                document.getElementById("auto-table").innerHTML +=
-                    "<tr><th scope=\"row\">" + i + ":00</th><td><input value='" + data[i] + "' id='C" + i + "' type=\"number\" step=\"0.5\"></td></tr>";
-            }
-        });
+            $("#off").click(function () {
+                if (!autoMode) {
+                    ThermoInterface.post_switching_mode("off").then(function () {
+                        $("#off").addClass("btn-primary").removeClass("btn-secondary");
+                        $("#on").removeClass("btn-primary").addClass("btn-secondary");
+                    });
+                }
+            });
+
+            $("#sendTable").click(function () {
+                var data = [];
+                for (var i = 0; i < 24; i++) {
+                    data.push(document.getElementById("C" + i).value);
+                }
+                ThermoInterface.post_auto_prog(data).then(function () { location.reload() });
+            });
+        })
     });
 
 </script>
