--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,10 @@
         <i class="fa fa-fire"></i>
         <span id="headerHeading"></span>
         <span class="badge badge-secondary leftmargin">
-            <small><i class="fa fa-thermometer"></i> <span id="tempPrint"></span></small>
+            <small>
+                <i class="fa fa-thermometer"></i>
+                <span id="tempPrint"></span>
+            </small>
         </span>
     </h1>
 
@@ -27,35 +30,37 @@
 
     <input type="checkbox" data-toggle="toggle" id="autoCheckbox" data-on="Automatico" data-off="Manuale">
 
-    <div class="row" id="auto">
-        <div class="col">
-            <table class="table table-striped table-sm">
-                <thead class="thead-light">
-                    <tr>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Temperatura</th>
-                    </tr>
-                </thead>
-                <tbody id="auto-table1">
+    <div id="auto">
+        <div class="row">
+            <div class="col">
+                <table class="table table-striped table-sm">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Ora</th>
+                            <th scope="col">Temperatura</th>
+                        </tr>
+                    </thead>
+                    <tbody id="auto-table1">
 
-                </tbody>
-            </table>
-        </div>
-        <div class="col">
-            <table class="table table-striped table-sm">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col">Ora</th>
-                    <th scope="col">Temperatura</th>
-                </tr>
-                </thead>
-                <tbody id="auto-table2">
+                    </tbody>
+                </table>
+            </div>
+            <div class="col">
+                <table class="table table-striped table-sm">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">Ora</th>
+                            <th scope="col">Temperatura</th>
+                        </tr>
+                    </thead>
+                    <tbody id="auto-table2">
 
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
+        <button type="button" class="btn btn-primary btn-block" id="sendTable">Invia</button>
     </div>
-    <button type="button" class="btn btn-primary btn-block" id="sendTable">Invia</button>
 </div>
 
 <script>var locales = {};</script>
@@ -76,7 +81,7 @@
             location.href = "login.html";
         }
     }).then(function () {
-        $(document).ready(function() {
+        $(document).ready(function () {
             // Select current mode
             ThermoInterface.get_switching_mode().then(function (mode) {
                 if (mode === "off" || mode === "on") {
@@ -109,7 +114,7 @@
 
                 $("#autoCheckbox").bootstrapToggle(autoMode ? "on" : "off")
                     .change(function () {
-                        if(this.checked) {
+                        if (this.checked) {
                             ThermoInterface.post_switching_mode("auto").then(function () {
                                 $("#on").addClass("disabled");
                                 $("#off").addClass("disabled");
